--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyWeatherApp</string>
+    <string name="google_api_failed_connection">Unable to get the current location</string>
 </resources>
