--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyWeatherApp</string>
     <string name="google_api_failed_connection">Unable to get the current location</string>
+    <string name="Networkconnectionfailed">Network connection unavailable</string>
+    <string name="Connection_Error">Connection temporarily disconnected</string>
 </resources>
